Fix WebVR so we don't animate while stopped at a JS breakpoint

While stopped at a JavaScript breakpoint, we shouldn't call into Javascript.

BUG=719101

Review-Url: https://codereview.chromium.org/2926953002
Cr-Commit-Position: refs/heads/master@{#478068}

Former-commit-id: dfb76f24c05c31ce433a30fc9b774b25c01c89da